--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html><head>
-<title>LittleJS Hello World Demo</title>
+<title>Rumel's Flight</title>
 <meta charset=utf-8>
 </head><body>
 
 <script src=https://cdn.jsdelivr.net/gh/KilledByAPixel/LittleJS/dist/littlejs.js></script>
+  <script src=pipe.js></script>
 <script src=game.js></script>
