--- a/index.html
+++ b/index.html
@@ -4,5 +4,7 @@
 </head><body>
 
 <script src=https://cdn.jsdelivr.net/gh/KilledByAPixel/LittleJS/dist/littlejs.js></script>
-  <script src=pipe.js></script>
+<script src=player.js></script>
+<script src=vehicle.js></script>
+<script src=vehicleFactory.js></script>
 <script src=game.js></script>
