--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 </head><body>
 
 <script src=https://cdn.jsdelivr.net/gh/KilledByAPixel/LittleJS/dist/littlejs.js></script>
+<script src=https://cdn.jsdelivr.net/gh/KilledByAPixel/LittleJS/plugins/uiSystem.min.js></script>
+<script src=uiManager.js></script>
 <script src=player.js></script>
 <script src=vehicle.js></script>
 <script src=vehicleFactory.js></script>
