--- a/index.html
+++ b/index.html
@@ -1,7 +1,54 @@
 <!DOCTYPE html><head>
-<title>Rumel's Flight</title>
+<title>Rumel's Rescue</title>
 <meta charset=utf-8>
+<link href="https://fonts.googleapis.com/css?family=Press+Start+2P" rel="stylesheet">
+    <link href="https://unpkg.com/nes.css/css/nes.css" rel="stylesheet" />
+<style>
+
+      html, body, pre, code, kbd, samp {
+          font-family: "Press Start 2P";
+      }
+      h1 {
+        color:green;
+      }
+section.menus {
+  z-index:1;
+  background: white;
+  border: 2px solid black;
+  padding: .5em;
+}
+      section.menus > div:not(.is-visible),
+      #intro-screen p:not(.is-visible) {
+        display:none;
+      }
+</style>
 </head><body>
+  <section class="menus">  
+    <div id="main-menu" class="is-visible">
+      <h1>Rumel's Rescue</h1>
+      <fieldset>
+        <legend>Difficulty</legend>
+        <label><input type="radio" name="difficulty" value="Easy" checked> Easy</label>
+        <label><input type="radio" name="difficulty" value="Medium"> Medium</label>
+        <label><input type="radio" name="difficulty" value="Hard"> Hard</label>
+      </fieldset>
+      <label><input type=checkbox name=muteAudio value=true> Mute Audio</label>
+      <label><input type=checkbox name=skipIntro value=true> Skip Intro</label>
+      <hr>
+      <button id=main-menu-submit>Start</button>
+      </div>
+      <div id="intro-screen">
+        <p class=is-visible>You were out for a pleasant ride with your best friend in the world; your pet Rumel The Lemur. The two of you were having quite the joyful occasion when
+        a large truck swerved out in front of you causing you to veer off road.</p> 
+        <p>You came to pinned by the body of your motorcycle and can only look on as a pair of flannel covered hands swoop in and take grasp of Rumel; laying unconcious but a few meters away!
+        <p>Horrified, you struggle against the weight on your legs to no avail. VRROOOMMM!! The truck spits and belches dirt all over as it roars away.</p>
+        <p>A sudden strength comes over you and you're able to leverage the vehicle off you. A look at the thing tells you it's going to be a bumpy ride, but Rumel needs you!</p>
+        <div>
+          <button class="last-page" disabled=disabled type=button> Back</button>
+          <button class="next-page" type=button> Next</button>
+        </div>
+      </div>
+    </section>
 
 <script src=https://cdn.jsdelivr.net/gh/KilledByAPixel/LittleJS/dist/littlejs.js></script>
 <script src=https://cdn.jsdelivr.net/gh/KilledByAPixel/LittleJS/plugins/uiSystem.min.js></script>
@@ -10,3 +57,5 @@
 <script src=vehicle.js></script>
 <script src=vehicleFactory.js></script>
 <script src=game.js></script>
+<script>
+</script>
