Get UI to actually set values upon initial start click. Update some features w/ difficulty setting

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ section.menus {
         <label><input type="radio" name="difficulty" value="Medium"> Medium</label>
         <label><input type="radio" name="difficulty" value="Hard"> Hard</label>
       </fieldset>
-      <label><input type=checkbox name=muteAudio value=true> Mute Audio</label>
+      <!-- <label><input type=checkbox name=muteAudio value=true> Mute Audio</label> -->
       <label><input type=checkbox name=skipIntro value=true> Skip Intro</label>
       <hr>
       <button id=main-menu-submit>Start</button>
