Fix typo from Solus version

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ section.menus {
           <div class="start-game-container is-centered">
           <hr>
 <span class="start-game-message">
-        Keep pressing <kbd>W</kbd>/<kbd>&uarr;</kbd>/LMB/Tapping Screen to catch the thiefs!
+        Keep pressing <kbd>W</kbd> to catch the thieves!
         </span>
         <br>
         <button type=button id=start-game>Start Game!</button>
@@ -65,7 +65,7 @@ section.menus {
       </div>
     </section>
 
-<script src=https://cdn.jsdelivr.net/gh/KilledByAPixel/LittleJS/dist/littlejs.js></script>
+<script src=https://cdn.jsdelivr.net/gh/KilledByAPixel/LittleJS/dist/littlejs.release.js></script>
 <script src=https://cdn.jsdelivr.net/gh/KilledByAPixel/LittleJS/plugins/uiSystem.min.js></script>
 <script src=uiManager.js></script>
 <script src=player.js></script>
