--- a/index.html
+++ b/index.html
@@ -42,6 +42,10 @@ section.menus {
         <legend>Settings</legend>
       <label><input type=checkbox name=muteAudio value=true> Mute Audio</label>
       <label><input type=checkbox name=skipIntro value=true> Skip Intro</label>
+      <details>
+        <summary>Extra Credit</summary>
+      <label><input type=checkbox name=punishLazy value=true> Punish Laziness? <small title="If player does not move for about 4 seconds, their character is teleported 1-2 lanes up.">(?)</small></label>
+      </details>
       </fieldset>
       <hr>
       <button id=main-menu-submit>Start</button>
@@ -71,7 +75,7 @@ section.menus {
         <p>Press 'P' to unpause</p>
         </div>
         <div id=game-over-screen>
-          <h2>Game Over!</h2>
+          <h2 class="nes-text is-error">Game Over!</h2>
           <p>You <span id=game-over-reason></span>!</p>
           <p>Your score was: <span id=final-score></span></p>
           <hr>
@@ -80,11 +84,8 @@ section.menus {
     </section>
 
 <script src=https://cdn.jsdelivr.net/gh/KilledByAPixel/LittleJS/dist/littlejs.release.js></script>
-<script src=https://cdn.jsdelivr.net/gh/KilledByAPixel/LittleJS/plugins/uiSystem.min.js></script>
 <script src=uiManager.js></script>
 <script src=player.js></script>
 <script src=vehicle.js></script>
 <script src=vehicleFactory.js></script>
 <script src=game.js></script>
-<script>
-</script>
