update player to make use of gravity system for the forced swerving
update falling vehicles the same

--- a/index.html
+++ b/index.html
@@ -84,6 +84,7 @@ section.menus {
     </section>
 
 <script src=https://cdn.jsdelivr.net/gh/KilledByAPixel/LittleJS/dist/littlejs.release.js></script>
+<!-- <script src=https://cdn.jsdelivr.net/gh/KilledByAPixel/LittleJS/dist/littlejs.js></script> -->
 <script src=uiManager.js></script>
 <script src=player.js></script>
 <script src=vehicle.js></script>
