Work on Guard Rails

--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@ section.menus {
           </div>
     </section>
 
-<script src=https://cdn.jsdelivr.net/gh/KilledByAPixel/LittleJS/dist/littlejs.release.js></script>
-<!-- <script src=https://cdn.jsdelivr.net/gh/KilledByAPixel/LittleJS/dist/littlejs.js></script> -->
+<!-- <script src=https://cdn.jsdelivr.net/gh/KilledByAPixel/LittleJS/dist/littlejs.release.js></script> -->
+<script src=https://cdn.jsdelivr.net/gh/KilledByAPixel/LittleJS/dist/littlejs.js></script>
 <script src=uiManager.js></script>
 <script src=player.js></script>
 <script src=vehicle.js></script>
