--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@ section.menus {
           <hr>
 <span class="start-game-message">
   Keep pressing <kbd>W</kbd>/<kbd>&uarr;</kbd>/LMB/Tapping your screen to try and catch up to the thieves! How long will you make it?
+  <br><br><small>Note: Running into the guardrails on the side of the road may result in.... a... lemony snickett situation...iykyk ;)</small>
         </span>
         <br>
         <button type=button id=start-game>Start Game!</button>
